docs(icons): Fix spacing in Icon examples.
I broke it with a previous commit.

--- a/docs/scss/_layout.scss
+++ b/docs/scss/_layout.scss
@@ -1,6 +1,8 @@
-.docs--layout-vertically {
-  display: flex;
-  flex-direction: column;
+.docs__layout-vertically {
+  div {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .docs__horizontal-spacing {
